# IceGuard

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-docker.yml  publish-pypi.yml
.kiro/specs/iceguard/: .config.kiro  design.md  requirements.md  tasks.md
benchmarks/: checkpoint_overhead.py
docs/: API.md  README.md  ROADMAP.md  STATUS.md  TUTORIAL.md  VALIDATION.md  api-reference.md  architecture.md  cli.md  docker.md  durable-execution.md  formal-verification.md  installation.md  opentelemetry.md  publishing.md  research.md  s3-express-one-zone.md  terraform.md
examples/: README.md
examples/cdk/: README.md  app.py
examples/python/: basic_protect.py  orphan_cleanup.py  spark_write.py
examples/sam/: README.md  handler.py  template.yaml
images/: README.md
infra/cloudwatch/: dashboard.json
src/iceguard/: __init__.py  adapters.py  catalog_integrations.py  checkpoint_store.py  cli.py  config.py  coordinator.py  coordinator_leader.py  dlq.py  durable.py  enums.py  exceptions.py  format_metadata.py  glue_catalog.py  metrics.py  models.py  orphan_scanner.py  otel.py  s3_ops.py  s3_track.py  safe_writer.py  schema_evolution.py  spark_write.py  watchdog.py
terraform/: README.md
terraform/environments/dev/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/environments/prod/: backend.tf.example  main.tf  outputs.tf  variables.tf
terraform/modules/checkpoint_bucket/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/cloudwatch_alarms/: main.tf  outputs.tf  variables.tf
terraform/modules/cloudwatch_dashboard/: main.tf  outputs.tf  variables.tf
terraform/modules/data_lake_bucket/: main.tf  outputs.tf  variables.tf
terraform/modules/iceguard_stack/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/kms/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/lambda_function/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda_iam/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda_layer/: main.tf  outputs.tf  variables.tf
tests/: conftest.py
tests/chaos/: test_rollback_injection_points.py
tests/e2e/: README.md  test_aws_live.py
tests/integration/: conftest.py  test_cloudwatch_metrics.py  test_coordinated_write.py  test_delta_rollback.py  test_fault_injection.py  test_format_metadata_moto.py  test_iceberg_rollback.py  test_s3_checkpoint.py
tests/property/: conftest.py  test_checkpoint_malformed.py  test_checkpoint_properties.py  test_config_properties.py  test_coordinator_properties.py  test_metrics_properties.py  test_orphan_properties.py  test_safe_writer_properties.py  test_watchdog_properties.py
tests/unit/: conftest.py  test_adapter_s3_delete.py  test_adapters.py  test_background_metrics.py  test_checkpoint_encryption.py  test_checkpoint_store.py  test_cli.py  test_config.py  test_coordinator.py  test_coordinator_leader.py  test_durable_bridge.py  test_exceptions.py  test_format_metadata.py  test_glue_catalog.py  test_hudi_adapter.py  test_metrics_emitter.py  test_orphan_batch_limit.py  test_orphan_scanner.py  test_otel.py  test_protect_extras.py  test_protect_hudi.py  test_s3_ops.py  test_s3_track.py  test_safe_writer.py  test_safe_writer_enter.py  test_schema_evolution.py  test_spark_write.py  test_watchdog.py
validation/: run_all.py
