[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iceguard"
version = "0.1.1"
description = "Reliability library for Spark-on-AWS-Lambda writes — prevents silent data loss with timeout-aware rollback, resumable checkpointing, and multi-Lambda coordination."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9,<3.13"
authors = [
    { name = "IceGuard Contributors" },
]
keywords = ["spark", "aws", "lambda", "iceberg", "delta-lake", "reliability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "boto3>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.82.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/iceguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.envs.default]
features = ["dev"]
