[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iceguard"
version = "0.2.2"
description = "Reliability library for Spark-on-AWS-Lambda lakehouse writes with timeout rollback, checkpoints, and orphan cleanup."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9,<3.14"
authors = [
    { name = "IceGuard Contributors" },
]
keywords = [
    "spark",
    "aws",
    "lambda",
    "iceberg",
    "delta-lake",
    "hudi",
    "reliability",
    "opentelemetry",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "boto3>=1.28.0",
]

[project.optional-dependencies]
spark = ["pyspark>=3.4.0"]
iceberg = ["pyiceberg>=0.6.0"]
delta = ["delta-spark>=3.0.0"]
hudi = ["pyspark>=3.4.0", "fastavro>=1.9.0"]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]
dev = [
    "hypothesis>=6.82.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
all = [
    "pyspark>=3.4.0",
    "pyiceberg>=0.6.0",
    "delta-spark>=3.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "hypothesis>=6.82.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/vaquarkhan/IceGuard"
Documentation = "https://github.com/vaquarkhan/IceGuard/tree/main/docs"
Repository = "https://github.com/vaquarkhan/IceGuard"
Issues = "https://github.com/vaquarkhan/IceGuard/issues"

[project.scripts]
iceguard = "iceguard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/iceguard"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "spark: requires PySpark (optional integration)",
    "aws: requires live AWS credentials and ICEGUARD_AWS_E2E=1",
]

[tool.coverage.run]
source = ["iceguard"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.hatch.envs.default]
features = ["dev"]
